# ShowthePhysics

./: .gitignore  README.md  Readme.txt  pyproject.toml
.github/workflows/: call-deploy-book.yml  deploy.yml
book/: _config.yml  _toc.yml  intro.md  references.md
book/Introduction/: About.ipynb  Authors.md  Foreword.md  NVON.md  Preface2.md  Python summary.ipynb  tableOC.md
book/Pedagogy/: Argumentation.ipynb  BackAndForthThinking.md  Introduction.md  Nos.md  PoE.md
book/demos/: Conceptdemos.md  Conceptdemos1.md  Conceptdemos2.md  Conceptdemos3.md  Conceptdemos4.md  Conceptdemos5.md  Inquirydemos.md  NOSdemos.md  Specialdemos.md  Specialdemos2.md  template.md
book/demos/demo01/: demo01.md
book/demos/demo02/: demo02.md
book/demos/demo03/: demo03.md
book/demos/demo04/: demo04.md
book/demos/demo05/: demo05.md
book/demos/demo06/: demo06.md
book/demos/demo07/: demo07.md
book/demos/demo08/: demo08.md
book/demos/demo09/: demo09.md
book/demos/demo10/: demo10.md
book/demos/demo11/: demo11.md
book/demos/demo12/: demo12.md
book/demos/demo13/: demo13.ipynb  demo13.md
book/demos/demo14/: demo14.md
book/demos/demo15/: demo15.md
book/demos/demo16/: demo16.md
book/demos/demo17/: demo17.md
book/demos/demo18/: demo18.md
book/demos/demo19/: demo19.md
book/demos/demo20/: demo20.md
book/demos/demo21/: demo21.md
book/demos/demo22/: demo22.md
book/demos/demo23/: demo23.md
book/demos/demo24/: demo24.md
book/demos/demo25/: demo25.md
book/demos/demo26/: demo26.md
book/demos/demo27/: demo27.md
book/demos/demo28/: demo28.md
(+71 files in other folders)
